# mcp_course

./: .gitignore  l3_arxiv_chatbot.ipynb  pyproject.toml
lesson_4/: research_server.py
lesson_9/: research_server.py
